# comfy-runtime

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/port-workflow/: SKILL.md
.github/workflows/: publish.yml  test.yml
benchmarks/: __init__.py  _fixtures.py  _harness.py  bench_configure.py  bench_execute_node_cheap.py  bench_lanczos_upscale.py  bench_load_nodes_from_path.py  bench_save_load_image.py  compare_optimizations.py  run_all.py
benchmarks/e2e/: .gitignore  aggregate.py  run_all.py  verify.py
benchmarks/e2e/_harness/: env.py  memory.py  result_schema.py  timing.py
benchmarks/e2e/comfyui-env/: pyproject.toml
benchmarks/e2e/profiling/: flux2_cliploader_test.py  flux2_dual_import.py  flux2_enum.py  flux2_fast_unload.py  flux2_fix_test.py  flux2_mem_probe.py  flux2_shapes.py  flux2_unload_profile.py  flux2_unload_timing.py  flux2_upstream.py  probe_attn.py  probe_comfyui.py  probe_full_warm.py  probe_mem.py  probe_runtime.py  probe_runtime2.py  probe_sampling.py  probe_warm.py  profile_sample.py
benchmarks/e2e/runners/: comfyui_runner.py  runtime_runner.py
benchmarks/e2e/runtime-env/: pyproject.toml
benchmarks/e2e/templates/: readme.md.j2  workflow.md.j2
benchmarks/results/: .gitignore  final.json  optimization_comparison.txt
comfy_runtime/: __init__.py  bootstrap.py  config.py  executor.py  memory.py  registry.py  shim.py
comfy_runtime/compat/: __init__.py  comfyui_version.py  execution.py  folder_paths.py  node_helpers.py  nodes.py  protocol.py
comfy_runtime/compat/comfy/: __init__.py  _diffusers_loader.py  _lora_peft.py  _scheduler_map.py  _tokenizer.py  _vendor_bridge.py  cli_args.py  clip_model.py  clip_vision.py  conds.py  context_windows.py  controlnet.py  diffusers_convert.py  hooks.py  latent_formats.py  lora.py  memory_management.py  model_base.py  model_detection.py  model_management.py  model_patcher.py  model_sampling.py  nested_tensor.py  ops.py  options.py  patcher_extension.py  sample.py  sampler_helpers.py  samplers.py  sd.py  utils.py
comfy_runtime/compat/comfy_api/: __init__.py
comfy_runtime/compat/comfy_execution/: __init__.py  utils.py
comfy_runtime/compat/comfy_extras/: __init__.py  nodes_custom_sampler.py  nodes_hooks.py  nodes_latent.py  nodes_lotus.py  nodes_lt.py  nodes_mask.py  nodes_model_advanced.py  nodes_model_merging.py  nodes_post_processing.py  (+3 more)
comfy_runtime/stubs/: __init__.py  comfy_aimdo_stub.py  latent_preview_stub.py  server_stub.py
docs/benchmarks/: README.md  flux2_speedup_handoff.md  profiling_findings.md
tests/: baseline.txt
tests/e2e_harness/: test_aggregate.py  test_comfyui_runner.py  test_env.py  test_memory.py  test_result_schema.py  test_run_all.py  test_runtime_runner.py  test_timing.py  test_verify.py
tests/fixtures/: __init__.py  tiny_sd15.py
tests/integration/: test_comfy_extras_import.py  test_flux2_workflow.py  test_third_party_custom_nodes.py  test_wheel_standalone.py  test_workflows.py
tests/unit/: test_bench_harness.py  test_configure_idempotent.py  test_dependencies.py  test_executor_cache.py  test_image_io_roundtrip.py  test_lanczos_fast_path.py  test_mit_clip_encode.py  test_mit_controlnet.py  test_mit_controlnet_forward.py  test_mit_custom_sampler.py  test_mit_flux_loader.py  test_mit_flux_sampler.py  test_mit_fp8.py  test_mit_gpu_residency.py  test_mit_hooks.py  test_mit_lora.py  test_mit_model_advanced.py  test_mit_model_patcher.py  test_mit_multi_gpu.py  test_mit_nodes_end_to_end.py  test_mit_nodes_mask.py  test_mit_partial_load.py  test_mit_sampler.py  test_mit_sampler_denoise.py  test_mit_sampler_device_mixing.py  test_mit_sampler_inpaint_mask.py  test_mit_sd_loader.py  test_mit_sdxl_loader.py  test_mit_standalone_loaders.py  test_mit_vae.py  test_mit_vram_state.py  test_registry_cache.py  test_shim.py  test_tiny_fixture.py
workflows/area_composition/: main.py  pyproject.toml
workflows/esrgan_upscale/: main.py  pyproject.toml
workflows/esrgan_upscale/nodes/: nodes_upscale_model.py
workflows/esrgan_upscale/workflow_utils/: download_models.py
workflows/flux2_klein_text_to_image/: main.py  pyproject.toml
workflows/flux2_klein_text_to_image/nodes/: nodes_custom_sampler.py  nodes_flux.py
workflows/flux2_klein_text_to_image/workflow_utils/: download_models.py
workflows/hires_fix/: main.py  pyproject.toml
workflows/img2img/: main.py  pyproject.toml
workflows/inpainting/: main.py  pyproject.toml
workflows/sd15_text_to_image/: main.py  pyproject.toml
workflows/sd15_text_to_image/nodes/: builtin_nodes.py
workflows/sd15_text_to_image/workflow_utils/: download_models.py
(+196 files in other folders)
