[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-runtime"
version = "0.3.1"
description = "Minimal ComfyUI runtime for deploying custom nodes as microservices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "anyin233", email = "cydia2001@duck.com"}]
keywords = ["comfyui", "runtime", "nodes", "microservice", "inference"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "numpy>=1.25.0",
  "pillow",
  "safetensors>=0.4.2",
  "scipy",
  "einops",
  "transformers>=4.50.3",
  "tokenizers>=0.13.3",
  "sentencepiece",
  "typing_extensions",
  "tqdm",
  "psutil",
  "filelock",
  "requests",
  "torchsde",
  "pyyaml",
  "blake3",
  "simpleeval>=1.0.0",
  "diffusers>=0.32.0",
  "peft>=0.14.0",
  "accelerate>=1.3.0",
  "huggingface-hub>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]

[project.urls]
Repository = "https://github.com/anyin233/comfy-runtime"

[tool.setuptools.packages.find]
include = ["comfy_runtime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
