[project]
name = "flux2-klein-text-to-image"
version = "0.1.0"
description = "Flux.2 Klein 4B Text to Image workflow using comfy_runtime"
requires-python = ">=3.10"
dependencies = [
    "comfy-runtime",
    "huggingface-hub",
]

[tool.uv.sources]
comfy-runtime = { path = "/home/yanweiye/Project/comfy_runtime", editable = true }
